--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 body {
-    background-color: pink;
+    background-color: blueviolet;
 }
 
 li {
     text-decoration: none;
+    list-style-type: none;
 }
