--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,11 @@ li {
     text-decoration: none;
     list-style-type: none;
 }
+
+.weather-app-data {
+    background-color: white;
+    max-width: 600px;
+    margin: 30px auto;
+    padding: 30px;
+    border-radius: 20px 20px 20px 20px;
+}
