--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,11 @@ li {
     padding: 30px;
     border-radius: 20px 20px 20px 20px;
 }
+
+.search-form-input{
+    background-color: pink;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 15px 20px;
+}
